# cnova

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: cli.rs  file.rs  iter.rs  lib.rs  main.rs  net.rs  remote.rs  result.rs  trace.rs  util.rs
src/ext/: mod.rs  option.rs  result.rs
src/iter/: discard.rs  inspect.rs  mod.rs
src/op/: file.rs  mod.rs  test.rs
src/remote/: common.rs  duration_secs.rs  mod.rs  net.rs  test.rs
tests/: test_handle_files.rs
