[package]
authors = ["wetfloo <yahahaha.1234567890@gmail.com>"]
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["cli", "music", "audio", "lrc"]
name = "cnova"
description = "A command-line tool to download lyrics for music, quickly"
license = "MIT"
homepage = "https://github.com/wetfloo/cnova"
repository = "https://github.com/wetfloo/cnova"
readme = "README.md"
version = "0.3.0"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
const_format = { version = "0.2.34", features = ["fmt", "rust_1_83"] }
ignore = "0.4.23"
indoc = "2.0"
lofty = "0.21.1"
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.14.0"

# Without this, ci builds will fail
[target.'cfg(all(target_os = "linux", any(target_env = "musl", not(any(target_arch = "x86", target_arch = "x86_64")))))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
