[package]
authors = ["wetfloo <yahahaha.1234567890@gmail.com>"]
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["cli", "music", "audio", "lrc"]
name = "cnova"
description = "A command-line tool to download lyrics for music, quickly"
license = "MIT"
homepage = "https://github.com/wetfloo/cnova"
repository = "https://github.com/wetfloo/cnova"
readme = "README.md"
version = "0.4.0"
edition = "2024"

[profile.release]
lto = "thin"

# Without this, ci builds will fail
[target.'cfg(all(target_os = "linux", any(target_env = "musl", not(any(target_arch = "x86", target_arch = "x86_64")))))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies]
sqlite = "0.37.0"
walkdir = "2.5.0"
