[package]
authors = ["wetfloo <yahahaha.1234567890@gmail.com>"]
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["cli", "music", "audio", "lrc"]
name = "cnova"
description = "A command-line tool to download lyrics for music, quickly"
license = "MIT"
homepage = "https://github.com/wetfloo/cnova"
repository = "https://github.com/wetfloo/cnova"
readme = "README.md"
version = "0.4.0"
edition = "2024"

[profile.release]
lto = "thin"

# Without this, ci builds will fail
[target.'cfg(all(target_os = "linux", any(target_env = "musl", not(any(target_arch = "x86", target_arch = "x86_64")))))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies]
lofty = "0.24.0"
sqlite = "0.37.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
wetutil = { git = "https://github.com/wetfloo/wetutil.git", rev = "32e50f7722934124902130fa5c3f98b97880b969" }
